# esp32-airtap

./: .gitignore  .gitmodules  LICENSE  Readme.md  makefile
3D-Models/: 4btn-v4-bracket-2.scad  4btn-v4-bracket-2.stl  4btn-v4-bracket.scad  4btn-v4-bracket.stl
3D-Models/3btn/: GME009605v4.3 Bracket airtap rev3.skp  GME009605v4.3 Bracket airtap rev3.stl  airtap-3btn-vent.skp  airtap-3btn-vent.stl
3D-Models/4btn-v1-v2/: GME009605v4.3 Bracket airtap 4btn.skp  GME009605v4.3 Bracket airtap 4btn.stl  airtap-4btn-oled-bracket.skp  airtap-4btn-oled-bracket.stl
3D-Models/4btn-v3/: 4btn-v3-bracket.3mf  4btn-v3-bracket.scad  4btn-v3-bracket.stl  GME009605v4.3 Bracket airtap 4btn.stl  M3 Washer x 9mm.skp  M3 Washer x 9mm.stl
Airtap-Tx/Gen-1/: PCB_PCB_2024-08-21.json  SCH_airtap-t4-rev1_2024-08-21.json  esphome-3btn-rev1.yaml  esphome-3btn-rev2.yaml  esphome-3btn-rev3.yaml  esphome-config-rev1.md  esphome-config-rev2.md
Airtap-Tx/Gen-2/: PCB_PCB_2024-08-21.json  SCH_airtap-t6-rev2_2024-08-21.json  esphome-4btn-rev1.yaml  esphome-4btn-rev2.yaml  esphome-config-rev1.md
Airtap-Tx/Gen-2/zigbee-4btn-rev2/: CMakeLists.txt  README.md  makefile  sdkconfig.esp32c6  zigbee2mqtt_converter.js
Airtap-Tx/Gen-2/zigbee-4btn-rev2/src/: CMakeLists.txt  buttons.c  fan_control.c  fan_control.h  led_control.c  led_control.h  main.c  oled_display.h  temperature.h  zigbee.c  zigbee.h
Airtap-Tx/Gen-4/: Info.md  Readme.md  esphome-pinprobe.yaml  restore-oem.sh
Documents/: Packing-Slip-3Btn-C6.odt  Packing-Slip-4Btn-C6-V3.odt  Packing-Slip-4Btn-C6.odt
(+17 files in other folders)
