idf_component_register(SRCS "main.c"
                           "buttons.c"
                           "led_control.c"
                           "fan_control.c"
                           "temperature.c"
                           "oled_display.c"
                           "zigbee.c"
                       INCLUDE_DIRS ".")
